--- a/public/front/style.css
+++ b/public/front/style.css
@@ -1,16 +1,14 @@
 @font-face {
-    font-family: 'vazir';
-    src: url('../fonts/vazir.eot') format('eot');
-    src : url('../fonts/vazir.ttf') format('truetype'),
-    url('../fonts/vazir.woff') format('woff'),
-    url('../fonts/vazir.woff') format('woff2');
+    font-family: "vazir";
+    src: url("../fonts/vazir.eot") format("eot");
+    src: url("../fonts/vazir.ttf") format("truetype"),
+        url("../fonts/vazir.woff") format("woff"),
+        url("../fonts/vazir.woff") format("woff2");
 }
 
-
-
-body{
+body {
     direction: rtl;
-    font-family: 'vazir';
+    font-family: "vazir";
 }
 
 .nav {
@@ -70,13 +68,69 @@ body{
     position: relative;
 }
 
+.circle {
+    top: 500px;
+    right: 200px;
+    position: relative;
+    width: 400px;
+    height: 400px;
+    margin-top: -400px;
+    z-index: 100;
+    border-radius: 50%;
+    border-top: 5px solid #FFEB3B;
+    /* animation: rotateCircle 3s infinite linear; */
+}
+
+@keyframes rotateCircle {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.circle::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 5px;
+    width: 400px;
+    height: 400px;
+    transform: rotate(120deg);
+    box-sizing: border-box;
+    border-radius: 50%;
+    border-top: 5px solid #fbc02d;
+}
+
+.circle::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -5px;
+    width: 400px;
+    height: 400px;
+    transform: rotate(240deg);
+    box-sizing: border-box;
+    border-radius: 50%;
+    border-top: 5px solid #cebc1f;
+}
+
 .home-img img {
     /* background: url("picture/person4.png"); */
-    background-repeat: no-repeat;
-    background-position: left bottom;
+    /* background-repeat: no-repeat;
+    background-position: left bottom; */
     /* background-size: 10%; */
-    position: absolute;
-    bottom: 0;
+    /* position: absolute;
+    bottom: 0; */
+    width: 400px;
+    height: 400px;
+    border-radius: 100%;
+    overflow: hidden;
+    z-index: 5000;
+    margin-top: 100px;
+    margin-right: 200px;
+
 }
 
 .home-img::before {
@@ -94,13 +148,21 @@ body{
     height: 250px;
 }
 
-/* تأثیر hover برای عنصر با کلاس skill */
+.skill {
+    transition: background-color 1s ease;
+}
+
 .skill:hover {
+    transition: background-color 1s ease;
     background-color: #f8f9fa;
 }
 
-/* تأثیر hover برای تگ <a> داخل عنصر با کلاس skill */
+.skill a {
+    transition: background-color 2s ease;
+}
+
 .skill:hover a {
+    transition: background-color 2s ease;
     color: #fbfbfb;
     text-decoration: none;
     background-color: #371dcb;
@@ -108,6 +170,7 @@ body{
 
 /* تأثیر hover برای progress-bar ها */
 .progress-bar:hover {
+    transition: background-color 0.3s ease, color 0.3s ease;
     font-weight: bold;
     background-color: #2539b6;
     color: #eaff00;
@@ -120,25 +183,36 @@ body{
     background-color: #dce1e7;
 }
 
-/* تأثیر hover برای تگ <a> داخل عنصر با کلاس blog-item */
+.blog-item a {
+    transition: background-color 2s ease;
+}
+
 .blog-item:hover a {
+    transition: background-color 2s ease;
     color: #000000;
     text-decoration: none;
-    background-color: #c81dcb;
+    background-color: #8e0303;
+}
+
+.blog-item img {
+    transition: width 0.5s ease, height 0.5s ease;
 }
 
 .blog-item:hover img {
+    transition: width 0.5s ease, height 0.5s ease;
     width: 100%;
     height: 270px;
 }
 
-/* تأثیر hover برای تگ <h4> داخل عنصر با کلاس blog-item */
-.blog-item:hover h4 {
-    color: #eb1313;
-    font-weight: bold;
+.blog-item h4 {
+    transition: color 2s ease;
 }
 
-.blog-detail img {
+.blog-item:hover h4 {
+    transition: color 2s ease;
+    color: #eb1313;
+}
+
+.blog-detailس img {
     height: auto;
 }
-
